Update JavaTypeResolver.java